syntax = "proto2";

package Gazillion;

enum ModifyCircleOperation {
	eMCO_Add	= 1;
	eMCO_Remove	= 2;
}

enum GlobalTuningVar {
	eGTV_VendorBuyPrice	= 0;
	eGTV_VendorSellPrice	= 1;
	eGTV_VendorXPGain	= 2;
	eGTV_PVPEnabled	= 3;
	eGTV_NumGlobalTuningVars	= 4;
}

enum AreaTuningVar {
	eATV_AreaMobSpawnHeat	= 0;
	eATV_AreaMobSpawnHeatReturn	= 1;
	eATV_NumAreaTuningVars	= 2;
}

enum WorldEntityTuningVar {
	eWETV_MobPowerDamage	= 0;
	eWETV_MobHealth	= 1;
	eWETV_MobXP	= 2;
	eWETV_MobDropRate	= 3;
	eWETV_MobSpecialDropRate	= 4;
	eWETV_ItemEnabled	= 5;
	eWETV_NumWorldEntityTuningVars	= 6;
}

enum PopObjTuningVar {
	ePOTV_PopulationObjectWeight	= 0;
	ePOTV_NumPopulationObjectTuningVars	= 1;
}

enum PowerTuningVar {
	ePTV_PowerCost	= 0;
	ePTV_PowerDamagePVE	= 1;
	ePTV_PowerDamagePVP	= 2;
	ePTV_NumPowerTuningVars	= 3;
}

enum RegionTuningVar {
	eRTV_PlayerLimit	= 0;
	eRTV_NumRegionTuningVars	= 1;
}

message NetStructPoint3 {
	optional float	X	= 1 [default = 0];
	optional float	Y	= 2 [default = 0];
	optional float	Z	= 3 [default = 0];
}

message NetStructIPoint3 {
	optional uint32	X	= 1 [default = 0];
	optional uint32	Y	= 2 [default = 0];
	optional uint32	Z	= 3 [default = 0];
}

message NetStructPoint2 {
	optional float	X	= 1 [default = 0];
	optional float	Y	= 2 [default = 0];
}

message NetStructIPoint2 {
	optional uint32	X	= 1 [default = 0];
	optional uint32	Y	= 2 [default = 0];
}

message NetStructProperty {
	required uint64	id	= 1;
	required uint64	value	= 2;
}

message NetStructPropertyList {
	repeated NetStructProperty	properties	= 1;
}

message NetStructLocomotionPathNode {
	required NetStructPoint3	vertex	= 1;
	required int32	vertexSideRadius	= 2;
}

message NetStructLocomotionState {
	optional uint32	locomotionflags	= 1;
	optional int32	method	= 2;
	optional float	movespeed	= 3;
	optional uint32	height	= 4;
	optional uint64	followentityid	= 5;
	optional float	followentityrange	= 6;
	required bool	updatepathnodes	= 7;
	repeated NetStructLocomotionPathNode	pathnodes	= 8;
	optional int32	pathgoalnodeindex	= 9;
}

message NetStructUniqueTransition {
	required uint64	regionId	= 1;
	required uint64	regionProtoId	= 2;
	required uint64	areaProtoId	= 3;
	required uint64	cellProtoId	= 4;
	optional uint64	entityProtoId	= 5;
}

message NetStructCreateRegionParams {
	required uint32	level	= 1;
	optional NetStructUniqueTransition	originUniqueTransition	= 2;
	optional bool	levelIsOverride	= 3 [default = false];
	optional uint64	difficultyProtoRef	= 4;
	optional uint64	matchNumber	= 5 [default = 0];
	optional bool	cheat	= 6 [default = false];
}

message NetStructModChangeObject {
	required uint64	mod	= 1;
	required uint32	change	= 2;
}

message NetStructPowerPointAllocation {
	required uint64	powerProtoId	= 1;
	required uint32	delta	= 2;
}

message NetStructWarpDest {
	required uint64	DestRegionPrototypeId	= 1;
	optional uint64	DestRegionId	= 2;
	optional uint64	DestEntityDbId	= 3;
	optional NetStructPoint3	DestPosition	= 4;
	optional uint64	TransferId	= 5;
	optional uint64	DestAreaPrototypeId	= 6;
	optional uint64	DestRegionConnectionTargetPrototypeId	= 7;
	optional uint64	DestStoryWarpPrototypeId	= 8;
}

message CommunityMemberBroadcast {
	required uint64	memberPlayerDbId	= 1;
	optional uint64	currentRegionRefId	= 2 [default = 123];
	optional uint64	currentAvatarRefId	= 3 [default = 123];
	optional uint64	currentCharacterLevel	= 4;
	optional uint64	currentPvpFactionRefId	= 5;
}

message CommunityNotify {
	required uint64	targetPlayerDbId	= 1;
	required string	sourcePlayerName	= 2;
	required uint64	circleId	= 3;
	required ModifyCircleOperation	operation	= 4;
}

message NetStructLiveTuningSettingEnumValue {
	required int32	tuningVarEnum	= 1;
	required float	tuningVarValue	= 2;
}

message NetStructLiveTuningSettingProtoEnumValue {
	required uint64	tuningVarProtoId	= 1;
	required int32	tuningVarEnum	= 2;
	required float	tuningVarValue	= 3;
}

